add margin when footnotes in cardlayout

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -252,3 +252,11 @@ tr.q-table-state-visible {
 .q-table-col-footnotes-double-last {
   padding-right: 16px!important;
 }
+
+.q-table-col-footnotes-cardlayout-single {
+  margin-right: 7px!important;
+}
+
+.q-table-col-footnotes-cardlayout-double {
+  margin-right: 14px!important;
+}
