show footnotes in in cardlayout headers

--- a/views/table.html
+++ b/views/table.html
@@ -36,7 +36,7 @@
       id="q-table-minibar-header"
       {% endif %}>
           {{ head.value }}
-          {%- if head.footnote %}<span class="q-table-annotation">{{ head.footnote }}</span>{%- endif %}
+          {%- if head.footnote %}<span class="q-table-annotation">{{ head.footnote.value }}</span>{%- endif %}
       </th> 
       {%- endfor %}
     </thead>
