fix display of width inbetween index and footnotes in footer

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -235,6 +235,8 @@ tr.q-table-state-visible {
 .q-table-footnote-index {
   vertical-align: super;
   font-size: 9px;
+  display: inline-block;
+  width: 5px;
 }
 
 .q-table-col-footnotes-single {
