--- a/views/footer.html
+++ b/views/footer.html
@@ -27,7 +27,11 @@
     {%- for cell in metaData -%}
       {%- if cell.data.footnote -%}
       <div class="q-table-footer-footnote">
-        <span class="q-table-footnote-index">{{loop.index}}</span><span class="q-table-footnote-text"> {{cell.data.footnote}}</span>
+        <span class="q-table-footnote-index"
+        {%- if loop.index >= 10 -%}
+          style="width: 9px!important"
+        {%- endif -%}>
+        {{loop.index}}</span><span class="q-table-footnote-text"> {{cell.data.footnote}}</span>
       </div>
       {%- endif -%}
     {%- endfor -%}
