--- a/views/footer.html
+++ b/views/footer.html
@@ -23,17 +23,15 @@
 
     {%- endfor %}
   {%- endif %}
-  {%- if metaData.length > 0 %}
-    {%- for cell in metaData -%}
-      {%- if cell.data.footnote -%}
+  {%- if footnotes.length > 0 %}
+    {%- for footnote in footnotes -%}
       <div class="q-table-footer-footnote">
         <span class="q-table-footnote-index"
         {%- if loop.index >= 10 -%}
           style="width: 9px!important"
         {%- endif -%}>
-        {{loop.index}}</span><span class="q-table-footnote-text"> {{cell.data.footnote}}</span>
+        {{loop.index}}</span><span class="q-table-footnote-text"> {{footnote.data.footnote}}</span>
       </div>
-      {%- endif -%}
     {%- endfor -%}
-  {%- endif %}
+  {%- endif -%}
 </div>
