--- a/views/table.html
+++ b/views/table.html
@@ -10,13 +10,13 @@
       <th class="q-table__cell q-table-cell--head q-table__cell--{{ head.type }}
       {# when column has footnotes, is not declared as a minibar (but the one that follows) and is not a text-type the class q-table-col-foonote will be adjusted #}
       {%- if item.options.cardLayout -%}
-        {%- if metaData.length >= 10 -%}
+        {%- if footnotes.length >= 10 -%}
           q-table-col-footnotes-cardlayout-double
         {%- else -%}
           q-table-col-footntoes-cardlayout-single
         {%- endif -%}  
       {%- else -%}
-        {%- if metaData.length >= 10 -%}
+        {%- if footnotes.length >= 10 -%}
           {%- if footnoteColIndexes.includes(loop.index0) and item.options.minibar.selectedColumn !== loop.index0 and item.options.minibar.selectedColumn === loop.index0+1 and head.type === "numeric" -%}
             q-table-col-footnotes-double
           {% elif loop.last %}
