--- a/views/table.html
+++ b/views/table.html
@@ -24,7 +24,15 @@
       {% set row_loop = loop %}
       <tr {% if numberOfRowsToHide and loop.index >= (tableData.length - numberOfRowsToHide) %}style="display: none;"{% endif %}>
         {%- for cell in row %}
-          {% include "./minibar.html" %}
+          {% if item.options.minibar.selectedColumn === null %}
+            {% include "./cells/cell.html" %}
+          {% elif minibar.type==="positive" %}
+            {% include "./cells/minibar-positive.html" %}
+          {% elif minibar.type==="negative" %}
+            {% include "./cells/minibar-negative.html" %}
+          {% elif minibar.type==="mixed" %}
+            {% include "./cells/minibar-mixed.html" %}
+          {% endif %}
         {%- endfor %}
       </tr>
       {%- endfor %}
