deleted functions to handle cardlayout

--- a/views/cells/minibar-negative.html
+++ b/views/cells/minibar-negative.html
@@ -1,7 +1,7 @@
 {%- if item.options.minibar.selectedColumn === loop.index0 and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
   <!-- this cell contains the minibar -->
   <td class="q-table-minibar-cell" data-minibar="{{minibar.type}}" style="padding-left: 12px; padding-right: 0px !important;">
-    <div data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} {{item.options.minibar.barColor.negative.className}}"
+    <div class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} {{item.options.minibar.barColor.negative.className}}"
   {% if minibar.values[row_loop.index].type !== "empty" %}
     style="width: {{minibar.values[row_loop.index].value}}%; background-color: {{item.options.minibar.barColor.negative.colorCode}};"
   {% endif %}>
@@ -18,7 +18,7 @@
 {% endif %} 
   class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}}
 {%- if item.options.minibar.selectedColumn === loop.index0 and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
-  q-table-minibar-cell--value" data-minibar="{{minibar.type}}" data-minibar-type="value" style="padding-right: 12px;
+  q-table-minibar-cell--value" data-minibar="{{minibar.type}}" style="padding-right: 12px;
 {% endif %}">
 {{ cell.value }}
 {%- if cell.footnote %}
