--- a/views/cells/minibar-positive.html
+++ b/views/cells/minibar-positive.html
@@ -5,7 +5,7 @@
 {% endif %} 
   class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}}
 {%- if item.options.minibar.selectedColumn === loop.index0 and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
-  q-table-minibar-cell--value" data-minibar-type="value" data-minibar="{{minibar.type}}" style="padding-left: 12px;
+  q-table-minibar-cell--value" data-minibar="{{minibar.type}}" style="padding-left: 12px;
 {% endif %}">
   {{ cell.value }}
 {%- if cell.footnote %}
@@ -15,7 +15,7 @@
 {%- if item.options.minibar.selectedColumn === loop.index0 and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
 <!-- this cell contains the minibar -->
 <td data-minibar="{{minibar.type}}" class="q-table-minibar-cell" style="padding-right: 12px;">
-  <div data-minibar-type="bar" class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} {{item.options.minibar.barColor.positive.className}}"
+  <div class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} {{item.options.minibar.barColor.positive.className}}"
 {% if minibar.values[row_loop.index].type !== "empty" %}
   style="width: {{minibar.values[row_loop.index].value}}%; background-color: {{item.options.minibar.barColor.positive.colorCode}};"></div>
 {%- endif %}
