fix mixed cardlayout padding

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -270,6 +270,14 @@ tr.q-table-state-visible {
   width: 100%!important;
 }
 
+.q-table-col-footnotes-cardlayout-single .q-table-minibar--mixed-mobile {
+  padding-right: 7px!important;
+}
+
+.q-table-col-footnotes-cardlayout-double .q-table-minibar--mixed-mobile {
+  padding-right: 12px!important;
+}
+
 .q-table--card-layout .q-table-minibar-alignment--positive {
   float: none;
   width: 100%!important;
