--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -117,6 +117,59 @@ td.q-table__cell--numeric {
   tbody tr:last-child {
     border-bottom: 0;
   }
+
+  .q-table-minibar-cell {
+    display:none!important;
+  }
+  
+  .q-table-minibar-cell--value {
+    background-color: white;
+    display: block!important;
+  }
+  
+  .q-table-minibar-bar--positive {
+    display: none!important
+  }
+  
+  .q-table-minibar-bar--negative {
+    display: none!important
+  } 
+  
+  .q-table-minibar--mixed {
+    background-color: white;
+    width: 100%!important;
+  }
+  
+  .q-table-minibar-alignment--positive {
+    float: none;
+    width: 100%!important;
+  }
+  
+  .q-table-minibar-alignment--empty {
+    text-align: right!important;
+  }
+  
+  .q-table-minibar-alignment--negative {
+    text-align: right!important;
+    float: none;
+    left: 0;
+  }
+  
+  .q-table-col-footnotes-cardlayout-single {
+    margin-right: 7px!important;
+
+    .q-table-minibar-alignment--negative, .q-table-minibar-alignment--empty, .q-table-minibar-alignment--positive {
+      padding-right: 7px;
+    }
+  } 
+  
+  .q-table-col-footnotes-cardlayout-double {
+    margin-right: 14px!important;
+
+    .q-table-minibar-alignment--negative, .q-table-minibar-alignment--empty, .q-table-minibar-alignment--positive {
+      padding-right: 14px;
+    }
+  }
 }
 
 .q-table_show-more-button {
@@ -220,9 +273,6 @@ tr.q-table-state-visible {
   width: 100%;
 }
 
-.q-table--card-layout .q-table-minibar-cell--value {
-  display: none!important;
-}
 .q-table-annotation {
   position: absolute;
   color: #6e6e7e;
@@ -246,69 +296,4 @@ tr.q-table-state-visible {
   &-double {
     padding-right: 16px!important;
   }
-}
-
-.q-table--card-layout .q-table-minibar-cell {
-  display:none!important;
-}
-
-.q-table--card-layout .q-table-minibar-cell--value {
-  background-color: white;
-  display: block!important;
-}
-
-.q-table--card-layout .q-table-minibar-bar--positive {
-  display: none!important
-}
-
-.q-table--card-layout .q-table-minibar-bar--negative {
-  display: none!important
-} 
-
-.q-table--card-layout .q-table-minibar--mixed {
-  background-color: white;
-  width: 100%!important;
-}
-
-.q-table--card-layout .q-table-minibar-alignment--positive {
-  float: none;
-  width: 100%!important;
-}
-
-.q-table--card-layout .q-table-minibar-alignment--empty {
-  text-align: right!important;
-}
-
-.q-table--card-layout .q-table-minibar-alignment--negative {
-  text-align: right!important;
-  float: none;
-  left: 0;
-}
-
-.q-table--card-layout .q-table-col-footnotes-cardlayout-single .q-table-minibar-alignment--negative {
-  padding-right: 7px;
-}
-.q-table--card-layout .q-table-col-footnotes-cardlayout-single .q-table-minibar-alignment--empty {
-  padding-right: 7px;
-}
-.q-table--card-layout .q-table-col-footnotes-cardlayout-single .q-table-minibar-alignment--positive {
-  padding-right: 7px;
-}
-
-.q-table--card-layout .q-table-col-footnotes-cardlayout-double .q-table-minibar-alignment--negative {
-  padding-right: 14px;
-}
-.q-table--card-layout .q-table-col-footnotes-cardlayout-double .q-table-minibar-alignment--empty {
-  padding-right: 14px;
-}
-.q-table--card-layout .q-table-col-footnotes-cardlayout-double .q-table-minibar-alignment--positive {
-  padding-right: 14px;
-}
-
-.q-table--card-layout .q-table-col-footnotes-cardlayout-single {
-  margin-right: 7px!important;
-}
-
-.q-table--card-layout .q-table-col-footnotes-cardlayout-double {
-  margin-right: 14px!important;
 }
