--- a/views/cells/cell.html
+++ b/views/cells/cell.html
@@ -3,8 +3,9 @@
   data-label="{{ tableData[0][loop.index0].value }}{% if (item.options.cardLayout or item.options.cardLayoutIfSmall) and tableData[0][loop.index0].footnote !== null and row_loop.index0 === 0 %}{{tableData[0][loop.index0].footnote.unicode}}{% endif %}"
 {% endif %} 
   class="q-table__cell q-table__cell--{{ cell.type }} {{cell.classes.join(" ")}}">
-  {{ cell.value }}
 {%- if cell.footnote %}
-  <span class="q-table-annotation">{{ cell.footnote.value }}</span>
+  <span data-annotation="{{ cell.footnote.value }}" class="q-table-annotation">{{ cell.value }}</span>
+{% else %}
+  {{ cell.value }}
 {%- endif %}
 </td>
