--- a/views/cells/minibar-negative.html
+++ b/views/cells/minibar-negative.html
@@ -20,8 +20,9 @@
 {%- if item.options.minibar.selectedColumn === loop.index0 and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
   q-table-minibar-cell--value" data-minibar="{{minibar.type}}" style="padding-right: 12px;
 {% endif %}">
-{{ cell.value }}
 {%- if cell.footnote %}
-  <span class="q-table-annotation">{{ cell.footnote.value }}</span>
+  <span data-annotation="{{ cell.footnote.value }}" class="q-table-annotation">{{ cell.value }}</span>
+{% else %}
+  {{ cell.value }}
 {%- endif %}
 </td>
