fix column header annotation and relative positioning

--- a/styles_src/q-table.scss
+++ b/styles_src/q-table.scss
@@ -261,6 +261,10 @@ tr.q-table-state-visible {
   width: 100%;
 }
 
+.q-table-annotation {
+  position: relative;
+}
+
 .q-table-annotation:after {
   content: attr(data-annotation);
   position: absolute;
