--- a/views/table.html
+++ b/views/table.html
@@ -27,14 +27,14 @@
       {% set row_loop = loop %}
       <tr {% if numberOfRowsToHide and loop.index >= (tableData.length - numberOfRowsToHide) %}style="display: none;"{% endif %}>
         {%- for cell in row %}
-          {% if item.options.minibar.selectedColumn === null or item.options.minibar === undefined %}
-            {% include "./cells/cell.html" %}
-          {% elif minibar.type==="positive" %}
+          {% if minibar.type==="positive" %}
             {% include "./cells/minibar-positive.html" %}
           {% elif minibar.type==="negative" %}
             {% include "./cells/minibar-negative.html" %}
           {% elif minibar.type==="mixed" %}
             {% include "./cells/minibar-mixed.html" %}
+          {% else %}
+            {% include "./cells/cell.html" %}
           {% endif %}
         {%- endfor %}
       </tr>
