--- a/views/cells/minibar-positive.html
+++ b/views/cells/minibar-positive.html
@@ -16,9 +16,9 @@
 {%- if item.options.minibar.selectedColumn === loop.index0 and item.options.minibar.selectedColumn != null and not initWithCardLayout %}
 <!-- this cell contains the minibar -->
 <td data-minibar="{{minibar.type}}" class="q-table-minibar-cell" style="padding-right: 12px;">
-  <div class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} {{item.options.minibar.barColor.positive.className}}"
+  <div class="q-table-minibar-bar--{{minibar.values[row_loop.index].type}} {{minibar.barColor.positive.className}}"
 {% if minibar.values[row_loop.index].type !== "empty" %}
-  style="width: {{minibar.values[row_loop.index].value}}%; background-color: {{item.options.minibar.barColor.positive.colorCode}};"></div>
+  style="width: {{minibar.values[row_loop.index].value}}%; background-color: {{minibar.barColor.positive.colorCode}};"></div>
 {%- endif %}
 </td> 
 {%- endif %}
