--- a/views/footer.html
+++ b/views/footer.html
@@ -18,7 +18,7 @@
         {%- else %}
           {{ source.text }}
         {%- endif %}
-        {% if not loop.last %}, {% endif %}
+        {%- if not loop.last %}, {% endif %}
       {%- endif %}
 
     {%- endfor %}
