--- a/views/table.html
+++ b/views/table.html
@@ -43,5 +43,16 @@
       </tbody>
     </table>
   </div>
+  {%- if footnotes.length > 0 %}
+    {%- for footnote in footnotes -%}
+      <div class="q-table-footer-footnote s-font-note-s">
+        <span class="q-table-footnote-index"
+        {%- if loop.index >= 10 -%}
+          style="width: 9px!important"
+        {%- endif -%}>
+        {{loop.index}}</span><span class="q-table-footnote-text"> {{footnote.data.footnote}}</span>
+      </div>
+    {%- endfor -%}
+  {%- endif -%}
   {% include "./footer.html" %}
 </div>
